--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-web": "~0.18.10",
     "setimmediate": "^1.0.5",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "expo-dev-client": "~2.1.6",
+    "expo-updates": "~0.16.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
