--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-dev-client": "~2.1.6",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.3",
+    "ngrok": "^4.3.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.4",
