--- a/package.json
+++ b/package.json
@@ -9,23 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^18.0.1",
     "@types/react": "~18.0.27",
-    "bash": "^0.0.1",
     "expo": "~48.0.9",
-    "expo-dev-client": "~2.1.6",
     "expo-status-bar": "~1.4.4",
-    "expo-updates": "~0.16.3",
-    "ngrok": "^4.3.3",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.4",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
-    "react-native-web": "~0.18.10",
-    "setimmediate": "^1.0.5",
-    "typescript": "^4.9.4",
-    "use-long-press": "^2.0.3"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
